# what-to-text

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/controllers/: birthday.rs  mod.rs  quotes.rs
src/services/: mod.rs  quotes.rs  whatsapp.rs
