[package]
name = "what-to-text"
version = "0.1.0"
authors = ["Diogo Kuiaski <diogo.kuiaski@gmail.com>", "Jose Kuiaski <joserk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#[dependencies.rocket_contrib]
#version = "0.4.10"
#default-features = false
#features = ["json"]